2012-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix generation of invalid instructions when --reserve-regs-iy is used.

2012-01-31 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucgbz80/spec.mk:
	  simulation timeout increased to 20s due to timeout failure on
	  gcc-torture-execute-divcmp-3 regressin test on
	  mypants.neurotica.com NetBSD/Sparc64 build machine

2012-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3482146.c:
	  Fixed bug #3482146.

2012-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3482146.c:
	  Regression test for bug #3482146.

2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3480597.

2012-01-29 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/key.c: fixed for Mac OS X

2012-01-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genJumpTab): fixed bug 3480545
	* support/regression/tests/bug3480545.c: new, added

2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-stdarg-4.c:
	  Fix bug #3463344.

2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Fix remaining gbz80 regression failures when using --max-allocs-per-node 5.
	* src/z80/gen.c:
	  Fix right shift for gbz80 using --max-allocs-per-node 1.

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix comparison and unary minus for gbz80 when many operands are on the stack.

2012-01-26 Raphael Neider <rneider AT web.de>

	* src/pic14/pcodepeep.c,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic16/device.c,
	  src/pic16/pcodepeep.c,
	  src/pic16/gen.c,
	  src/pic16/pcoderegs.c,
	  src/pic16/ralloc.c,
	  src/pic16/pcode.c,